feat(ch14): 完成 Structured Streaming 教学章节实现
主要变更：
1. 完善 DataFrame 创建接口，支持传入 schema 对齐数据
2. 实现 MemoryStream 流式数据源，支持按 schema 处理位置行数据
3. 实现 StreamExecution 微批执行引擎，替换流式节点为静态 Scan
4. 新增 SQL 解析支持 WHERE 条件和普通列投影
5. 新增流式查询测试用例，覆盖空批处理、单词统计场景
6. 修复 Row 类不可变 map 返回和文件结尾换行问题
7. 更新文档章节内容，修正章节标题和说明